// Copyright 2021 FishGoddess.  All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file.

syntax = "proto3";
package github.com.avinoplan.postar.api;

// protoc -I=. --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative api.proto
option go_package = "github.com/avinoplan/postar/api";

// ResponseCodes is all codes of response.
enum ServerCode {
  OK = 0;
  BAD_REQUEST = 400;
  TIMEOUT = 408;
  SEND_EMAIL_FAILED = 11000;
}
